--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -278,7 +278,7 @@ span.turn {
 #videos {
   margin-top: 20px;
   padding-bottom: 20px;
-  padding-left: 20px;
+/*  padding-left: 20px;*/
 /*  align-content: center;*/
   /*margin: auto;*/
 }
